--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,28 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Purti App",
+  "short_name": "Purti App",
+  "theme_color": "#000000",
+  "background_color": "#000000",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
   "icons": [
-      
+      {
+        "src": "maskable.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any maskable"
+      },
+      {
+        "src": "logo-192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "logo-512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      }
   ]
   
 }
